fixed card overflow

--- a/bonsoir-app/src/components/navigation/styles/Button.css
+++ b/bonsoir-app/src/components/navigation/styles/Button.css
@@ -8,10 +8,14 @@ button {
     border:none;
     transition: opacity 0.25s;
     font-size:1.5rem;
+    transition: color 0.4s ease-in-out;
+    transition: background-color 0.4s ease-in-out;
 }
 
 button:hover {
     opacity: 90%;
+    color: black;
+    background-color:white;
 }
 
 button:active {
