--- a/bonsoir-app/src/components/welcome/Feature.css
+++ b/bonsoir-app/src/components/welcome/Feature.css
@@ -1,32 +1,51 @@
-.feature.wrapper {
+.feature-wrapper {
     display:flex;
     flex-direction: column;
     transition: box-shadow 0.15s ease-in-out;
     box-shadow: 0px 0px 5px 0.15px;
 }
 
-.feature.image {
+.feature-image {
     width:100%;
-    height:50%;
+    height:200px;
+    opacity:0.9;
 }
 
-.feature.text {
+.disabled {
+    filter: grayscale(100%);
+}
+
+.feature-text {
     background-color:white;
     color:black;
     padding: 2rem 2rem 4rem 2rem;
-    height:50%;
     font-size:1.5rem;
+    opacity:0.8;
 }
 
-.feature.description {
+.feature-header {
+    min-height: 5rem;
+}
+
+.feature-description {
     padding: 2em 0em 0em 0em;
 }
 
-.feature.wrapper:hover {
+.feature-wrapper:hover {
     box-shadow: 0px 0px 15px 0.15px;
+    
+    .feature-image {
+        opacity:1;
+    }
 
-    .feature.image {
-        opacity: 80%;
-        z-index:-1;
+    .feature-text {
+        opacity:1;
+    }
+    
+}
+
+@media screen and (max-width: 768px){
+    .feature-image {
+        height:300px;
     }
 }
