--- a/bonsoir-app/src/pages/styles/WelcomePage.css
+++ b/bonsoir-app/src/pages/styles/WelcomePage.css
@@ -1,59 +1,45 @@
-.intro.wrapper {
+.intro-wrapper {
     display:flex;
-    padding: 4rem 4rem 0rem 4rem;
     background-color:rgb(248, 227, 227);
 }
 
-.intro.text {
+.intro-text {
     flex-basis: 50%;
     font-size: 2.5rem;
+    padding: 4rem;
 }
 
-.emphasis {
-    color: crimson;
-}
-
-.intro.button {
+.intro-button {
     padding:2rem;
     font-size:2rem;
     margin-top: 2rem;
 }
 
-.video {
-    padding:2rem;
-    background-color:black;
-    flex-basis:50%;
-    box-shadow: 0px 0px 5px 5px;
+.intro-video {
+    max-width:50%;
+    flex-grow:1;
+    padding:1rem;
 }
 
-.overlay {
-    position:absolute;
-    top:30%;
-    background-color:white;
-    padding:2rem;
-}
-
-.page.header {
+.features-header {
     padding: 8rem 4rem 0rem 4rem;
     font-size: 3rem;
-    display:flex;
-    align-items: center;
 }
 
-.features.grid {
+.features-grid {
     padding: 4rem 2rem 4rem 2rem;
     display:grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-}
-
-.about.pic {
-    max-width:240px;
-    min-height:240px;
-    border-radius:50%;
+    gap:3px;
 }
 
 .footer {
     padding: 2rem;
     background-color:crimson;
+}
+
+@media screen and (max-width: 1000px) {
+    .intro.text {
+        font-size:2rem;
+    }
 }
